# VoxelHex

./: .gitignore  Cargo.toml  README.md
assets/models/: ginerbread_house_by_kirra_luan.vox
assets/shaders/: viewport_render.wgsl
benches/: performance.rs
examples/: cpu_render.rs  dot_cube.rs  gpu_render.rs  minecraft.rs  simple.rs  sponza.rs
src/: lib.rs  object_pool.rs
src/boxtree/: detail.rs  iterate.rs  mipmap.rs  mod.rs  node.rs  tests.rs  types.rs  unified_traits.rs
src/boxtree/update/: clear.rs  insert.rs  mod.rs  tests.rs
src/convert/: bytecode.rs  magicavoxel.rs  mod.rs  serde.rs  tests.rs
src/raytracing/: cpu.rs  mod.rs  tests.rs
src/raytracing/bevy/: bind_groups.rs  cache.rs  data.rs  mod.rs  pipeline.rs  types.rs  view.rs  viewport_render.wgsl
src/raytracing/bevy/data/: cache.rs  mod.rs  upload_queue.rs
src/raytracing/bevy/pipeline/: bind_groups.rs  mod.rs
src/spatial/: lut.rs  mod.rs  tests.rs
src/spatial/math/: mod.rs  tests.rs  vector.rs
src/spatial/raytracing/: mod.rs  tests.rs
whisp/: .gitignore  Cargo.toml
whisp/assets/models/: gingerbread_house_by_kirra_luan.vox
whisp/src/: components.rs  loader.rs  main.rs  ui.rs  ui_behavior.rs  ui_layout.rs
whisp/src/ui/: behavior.rs  components.rs  input.rs  layout.rs  mod.rs
