[workspace]
members = ["whisp"]

[package]
name = "voxelhex"
version = "0.1.2"
edition = "2024"
authors = ["Dávid Tóth <toth.david.munka@gmail.com>"]
license = "MIT OR Apache-2.0"

[features]
default = ["bevy_wgpu","bytecode", "dot_vox_support"]
raytracing = []
bytecode = ["dep:bendy"]
serialization = ["dep:serde"]
dot_vox_support = ["dep:dot_vox", "dep:nalgebra", "dep:bendy"]
bevy_wgpu = ["raytracing", "dep:bevy", "dep:crossbeam", "dep:bimap"]

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0.217", features = ["derive"], optional = true }
bendy = { git = "https://github.com/P3KI/bendy.git" , features = ["std", "serde"], optional = true }
dot_vox = { version = "5.1.1", optional = true }
nalgebra = { version = "0.33.0", optional = true }
crossbeam = { version = "0.8.4", optional = true }
bimap = { version = "0.6.3", optional = true }
bevy = { version = "0.16.0", features = ["wayland"], optional = true }

# debugging
#linker = "/usr/bin/clang"
#rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
#[profile.release] # for flamegraph
#debug = true

[dev-dependencies]
#lldb = "0.0.11" to enable debugging support
# maybe try lldb-sys?!
rand = "0.8.5"
criterion = { version = "0.4", features = ["html_reports"] }

# for example cpu_render
image = "0.25.1"

# for example bevy_wgpu
bevy_panorbit_camera = "0.21.1"


[[bench]]
name = "performance"
harness = false
